[package]
name = "codeowner-rs"
version = "0.1.0"
authors = ["Andreas Rammhold <andreas@rammhold.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
globset = "0.4"
hubcaps = { git = "https://github.com/piegamesde/hubcaps", branch = "master" }
anyhow = "1.0.41"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
futures = "0.3.15"
log = "0.4.14"
simple_logger = "1.11.0"
serde = "1.0.130"
serde_json = "1.0.68"
